# screensavers-chaos

./: CHANGELOG.md  Cargo.toml  README.md  build.rs  build_helpers.rs
.github/workflows/: ci.yml
assets/: local76-chaos.desktop  local76-chaos.xml  scene-chaos.desktop  scene-chaos.xml
scripts/: build.sh  release.sh  test.sh
src/: chaos.rs  main.rs  tests_perf.rs
src/chaos/: chaos_tests.rs  draw.rs  draw_helpers.rs  mod.rs  physics.rs  screensaver_impl.rs  types.rs  update_chaos.rs
