[package]
name = "chaos"
version = "2026.6.10-1"
edition = "2021"
description = "chaos - retro terminal screensaver effect"
autobins = false

[[bin]]
name = "chaos"
path = "src/main.rs"

[dependencies]
library = { git = "https://github.com/local76/library.git", tag = "v2026.6.10-1", features = ["screensaver-runtime"] }

[build-dependencies]
library = { git = "https://github.com/local76/library.git", tag = "v2026.6.10-1", features = ["screensaver-runtime"] }
embed-resource = "2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[package.metadata.deb]
name = "scene-chaos"
maintainer = "Screensavers Developer <dev@local76.org>"
extended-description = "Screensaver effect (chaos) part of the screensavers collection."
depends = "libc6, xterm"
section = "utils"
priority = "optional"
assets = [
    ["target/release/chaos", "usr/libexec/local76/screensavers/chaos", "755"],
    ["assets/local76-chaos.desktop", "usr/share/applications/local76-chaos.desktop", "644"],
    ["assets/local76-chaos.xml", "usr/share/xscreensaver/config/local76-chaos.xml", "644"],
    ["assets/local76-chaos.png", "usr/share/pixmaps/local76-chaos.png", "644"]
]

[package.metadata.generate-rpm]
name = "scene-chaos"
version = "2026.6.10-1"
release = "1"
arch = "x86_64"
summary = "chaos - retro terminal screensaver effect"
description = "Screensaver effect (chaos) part of the screensavers collection."
license = "MIT"
assets = [
    { source = "target/release/chaos", dest = "/usr/libexec/local76/screensavers/chaos", mode = "755" },
    { source = "assets/local76-chaos.desktop", dest = "/usr/share/applications/local76-chaos.desktop", mode = "644" },
    { source = "assets/local76-chaos.xml", dest = "/usr/share/xscreensaver/config/local76-chaos.xml", mode = "644" },
    { source = "assets/local76-chaos.png", dest = "/usr/share/pixmaps/local76-chaos.png", mode = "644" }
]
[patch."https://github.com/local76/library.git"]
library = { path = "../library" }
